k8s/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cinepass-dev
  labels:
    app.kubernetes.io/part-of: cinepass
    environment: dev
